--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 								</div>
 							</div>
 							<div class="colon-right">
-								<img class="banner" src="images/iphone.png">
+								<img class="banner" src="images/iphon.png">
 							</div>
 						</div>
 					</div>
