Changing the picture

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 								
 							</div>
 							<div class="colon-right">
-								<img class="banner" src="images/ipad.png">
+								<img class="banner" src="images/ipa.png">
 							</div>
 						</div>
 					</div>
